# code_examples

./: LICENSE  README.md
Decay/: decay.cpp
Fibonacci/: Fibonacci.cpp  FibonacciFast.cpp  compile.sh
HelloDocker/: Dockerfile  README.md  hello.sh
configuration_reader/: CMakeLists.txt
configuration_reader/configuration/: Configuration.hpp
configuration_reader/configuration_file/: ConfigurationFile.cpp  ConfigurationFile.hpp
dynamically_loaded_libraries/: Library.cpp  Library.hpp  README.md  example  main.cpp
map_of_any/: README.md  map_of_any.cpp
partial_applications/: main.cpp
variant_and_any/: any.cpp  variant.cpp
